# Lumeo-App

./: .gitignore  ReadMe.md  package-lock.json  skills.md
.github/: flutter-ci.yml
.github/workflows/: backend-cicd.yml  flutter-ci.yml  ml-cicd.yml
Landing-Page/: package-lock.json  package.json
Landing-Page/src/: App.jsx
LandingPage/backend/: app.js
LandingPage/frontend/: index.html  package-lock.json  package.json
LandingPage/frontend/src/: App.jsx  index.css
Lumeo-worker/: package-lock.json  package.json
Lumeo-worker/src/: cloudinary.js  index.js
admin-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
admin-dashboard/src/: App.jsx  index.css
adminpanel/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
adminpanel/src/: App.tsx  index.css
backend/: package-lock.json  package.json
backend/public/: resetPassword.html
backend/src/: config.js  index.js  test_db.js
backend/tests/: health.test.js  product.test.js
demo/: .gitignore  README.md  package-lock.json  package.json  pubspec.yaml
demo/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
demo/backend/: package.json
demo/lib/: Constants.dart  forgotPassword.dart  homePage.dart  login.dart  main.dart  onboarding_page1.dart  onboarding_page2.dart  register.dart  wrapper.dart
demo/linux/: CMakeLists.txt
demo/web/: index.html  manifest.json
demo/windows/: CMakeLists.txt
ml/: README.md  ar_empty_space_recommendation.ipynb  empty_space_recommender.ipynb  ml_service.py  pyproject.toml  render-build.sh  repair_step1_venv.ps1  requirements-step1.txt  requirements.txt  similar_product_recommendation.ipynb  step1_env_doctor.py  test_main.py
ml/ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pipeline/: api.py  clean.py  generate.py  pipeline.py  triposr_run.py
src/: chair_builder.py  main.py  mesh_builder.py  requirements.txt  stage1_chair_pointcloud.txt
src/blueprint/: blueprint_model.py
src/chair_generator/: chair_generator.py
src/geometry/: leg_splitter.py  part_mesh_builder.py  region_splitter.py
(+717 files in other folders)
