[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "scikit-learn",
  "opencv-python",
  "torch",
  "torchvision",
  "torchaudio",
  "transformers",
  "datasets",
  "numpy",
  "pandas",
  "pillow",
  "matplotlib",
  "rembg[cpu]>=2.0.72",
  "onnxruntime>=1.19.0",
  "numba>=0.61.0",
  "ipykernel",
  "ftfy",
  "regex",
  "clip @ git+https://github.com/openai/CLIP.git",
  "uvicorn",
  "fastapi>=0.129.0",
  "python-multipart>=0.0.22",
]

[tool.uv.extra-build-dependencies]
clip = ["setuptools<81"]
